# sports_betting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements-simple.txt  tmpclaude-5bf3-cwd
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  data-validation.yml  deploy-manual.yml  deploy.yml  pipeline.yml  rollback.yml  train-manual.yml  train.yml
configs/: config.dev.yaml  config.prod.yaml  feast_config.yaml  logging.yaml  mlflow_config.yaml
configs/great_expectations/: great_expectations.yml
dashboard/: app.py
dashboard/components/: charts.py  widgets.py
dashboard/pages/: analytics.py  model_performance.py  news_feed.py  predictions.py
data/features/: .gitkeep  features.csv  model_ready.csv  test_predictions.csv
data/processed/: team_stats.csv
data/raw/: matches.csv
docs/: APPLICATION_FLOW.md  FINAL_STRUCTURE.md  IMPROVEMENTS_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  RUN_E2E.md
docs/architecture/: api_design.md  data_flow.md  system_design.md
docs/decisions/: 001_ml_framework.md  002_feature_store.md  003_rag_architecture.md
docs/guides/: contributing.md  deployment.md  development.md  setup.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/docker/: api.Dockerfile  dashboard.Dockerfile  mlflow.Dockerfile  training.Dockerfile
infra/terraform/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  s3_website.tf  (+3 more)
models/: features.txt  model_info.json  tuning_results.json
scripts/: backfill_features.py  eda_new_features.py  evaluate.py  predict.py  register_model.py  run_api.py  run_e2e.py  run_frontend.py  run_news_collector.py  run_stream_processor.py  seed_data.py  setup_database.py  train.py  tune.py
src/: __init__.py
tests/: conftest.py
(+115 files in other folders)
