[project]
name = "epl-predictor"
version = "0.1.0"
description = "EPL Sports Betting Odds Prediction App"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N803", "N806"]  # N803/N806: uppercase X_train/X_test is ML convention

[tool.ruff.lint.per-file-ignores]
"src/*/__init__.py" = ["F401"]  # re-exports in __init__.py are intentional

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PyYAML has no bundled stubs — suppress import-untyped for it
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Training code uses complex MLflow/numpy types; skip strict checking there
# config.py has a var-annotated issue in a dict literal that is harmless
module = ["src.training.*", "src.utils.config"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
